assets/css/_sass/_flexible-nav.scss
/* Flexible Navigation Styles: */

.flexnav-wrapper {
	position: relative;
	top: 0;
	left: 0;
	width: 100%;
	height: 60px;
	padding: 0 1rem;
	border: 2px solid red;
	background-color: black;
}

ul[class*="flexnav"] {
	margin: 0;
	padding: 0;
	list-style-type: none;
}

[class*="flexnav"][class*="__item"] {
	a {
		display: inline-block;
		font-weight: bold;
		text-decoration: none;
		color: white;
		-moz-transition: color .3s;
		-webkit-transition: color .3s;
		transition: color .3s;
		white-space: nowrap;
		&:hover, &:focus {
			color: magenta;
		}
	}
}

// ul, level 1
.flexnav-main-grid {
	position: relative;
	display: flex;
	align-items: center;
	text-align: center;
	height: 100%;
	max-width: 60vw;
}

// li, level 1
.flexnav__item {
	padding-right: 2em;
}

// li, level 1
.flexnav__more-menu {
//	position: relative;
//	align-self: flex-start;
}

// div
.flexnav-more__prompt {
	height: 60px;
	font-weight: bold;
	text-transform: uppercase;
	line-height: 60px;
	color: magenta;
	span {
		display: inline-block;
		transform: rotate(90deg);
	}
	&:hover, &:focus {
		cursor: pointer;
	}
}

// ul, level 2
.flexnav-more__wrapper {
	position: absolute;
	right: -4.1vw;
	top: 0;
	margin-top: 60px !important;
	list-style-type: none;
	text-align: left;
	z-index: 1;
	display: none;
	opacity: 0;
	-moz-transition: opacity .5s;
	-webkit-transition: opacity .5s;
	transition: opacity .5s;
	background-color: black;
	border-top: 1px solid rgba(255,255,255,.5);
}

// li, level 2
.flexnav-more__item {
	background-color: black;
	border-bottom: 1px solid rgba(255,255,255,.5);
	a {
		padding: 0 1em;
		text-align: left !important;
		line-height: 3;
	}
}

/* Classes for JS: */

.hidden {
	display: none;
}

.show-more-menu {
	display: initial;
	opacity: 1;
}

